k8s/certificate-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificate-service
  namespace: traininghub
  labels:
    app: certificate-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: certificate-service
  template:
    metadata:
      labels:
        app: certificate-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: certificate-service
          image: certificate-service:pfe-local
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 5004
          readinessProbe:
            httpGet:
              path: /api/v1/certificates/health
              port: 5004
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /api/v1/certificates/health
              port: 5004
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: certificate-service
  namespace: traininghub
  labels:
    app: certificate-service
spec:
  type: ClusterIP
  selector:
    app: certificate-service
  ports:
    - name: http
      port: 5004
      targetPort: 5004
